fixed label alignment

--- a/src/styles/components/_FormField.scss
+++ b/src/styles/components/_FormField.scss
@@ -3,7 +3,6 @@
 
   &.st-react-form-field--horizontal {
     flex-flow: row;
-    align-items: center;
     gap: 0.5rem;
   }
 
