--- a/src/styles/components/_Label.scss
+++ b/src/styles/components/_Label.scss
@@ -1,8 +1,8 @@
 .st-react-label {
-  display: flex;
-  gap: 0.2rem;
+  line-height: 1.5rem;
 
   .st-react-label--required-mark {
     color: var(--st-error-red);
+    margin-right: 0.2rem;
   }
 }
